arb_fragment_shader_interlock: Test image load/store.
A test to check whether GL_ARB_fragment_shader_interlock operates as
expected. This test simulates blending behaviour by using image loads/stores
to a 3D texture. The blending formula used is:
result = current_alpha * current_color + (1 - current_alpha) * previous_color
Multisampling is also enabled and tested at 2, 4, 8 and 16.

Signed-off-by: Plamena Manolova <plamena.manolova@intel.com>
Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>

--- a/tests/spec/CMakeLists.txt
+++ b/tests/spec/CMakeLists.txt
@@ -160,3 +160,4 @@ add_subdirectory (arb_shader_texture_image_samples)
 add_subdirectory (arb_texture_barrier)
 add_subdirectory (intel_conservative_rasterization)
 add_subdirectory (arb_post_depth_coverage)
+add_subdirectory (arb_fragment_shader_interlock)
